<resources>
    <string name="app_name">RequeriOn</string>
    <string name="label_inputSus">Number SUS: </string>
    <string name="label_inputCpf">CPF: </string>
    <string name="hint_sus">000 0000 0000 0000</string>
    <string name="hint_cpf">___.___.___-__</string>
    <string name="activityLoginTitle">Login to your Account</string>
    <string name="createAccount">Create Account</string>
    <string name="text_buttonLogin">Login</string>
    <string name="msgInputIncorrect">Complete all the fields correctly</string>
    <string name="msgIncorrectLogin">Incorrect SUS number or CPF</string>
    <string name="text_requirements">Requirements</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="name">Name: </string>
    <string name="about_p1">Introducing the RequeriOn app, an innovative solution to help reduce patient absenteeism in scheduled appointments and exams. We know that many people miss out on getting the treatment they need because of absences due to lack of updates or the time taken to make appointments for medical appointments. </string>
    <string name="about_p2">With RequeriOn, this no longer has to happen. Our app is easy to use and offers a variety of features to help patients manage their claims, whether they have been booked or not. The intuitive interface allows users to see their scheduled appointments and exams in one place, with personalized reminders to help them remember.</string>
    <string name="about_p3">In addition, RequeriOn allows patients to reschedule their appointments or exams or even cancel with just a few taps on the screen, making it easier for them to adapt to changing schedules or unforeseen circumstances. With our real-time notification technology, patients are quickly informed of any changes to their appointments.</string>
    <string name="about_p4">It doesn\'t matter if you are a patient who needs to get better organized or a healthcare professional looking to reduce absenteeism for your patients, RequeriOn is the right choice. Our app is designed to help improve the quality of healthcare by making processes more efficient and reducing absenteeism rates. Try RequeriOn today and see how we can help you live a healthier, more organized life.</string>
    <string name="title_activity_requeriments">RequerimentsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
